--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="stylesheet" href="./global/header.css" /> 
     <meta
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline';"
@@ -13,10 +14,10 @@
       <h1>Noduro Open Beta 1.0.0</h1>
     </div>
     <div class="header_right">
-      <button class = "header_nav_button"><a class = "header_navigator padding" href = index.html>Home</a></button>
-      <button class = "header_nav_button"><a class = "header_navigator padding" href = technology/tech.html>Technology</a></button>
-      <button class = "header_nav_button"><a class = "header_navigator padding" href = settings/settings.html>Settings</a></button>
-      <button class = "header_nav_button"><a class = "header_navigator padding" href = login/login.html>Login</a></button>
+      <button class = "header_nav_button"><a class = "header_nav_links" href = index.html>Home</a></button>
+      <button class = "header_nav_button"><a class = "header_nav_links" href = ./technology/tech.html>Technology</a></button>
+      <button class = "header_nav_button"><a class = "header_nav_links" href = ./settings/settings.html>Settings</a></button>
+      <button class = "header_nav_button"><a class = "header_nav_links" href = ./login/login.html>Login</a></button>
 
     </div>
   </div>
