--- a/login/login.html
+++ b/login/login.html
@@ -6,7 +6,8 @@
   <meta name="google-signin-client_id"
     content="135381014052-hs8qc6avk8chp3epae7lhv3jfot0stcp.apps.googleusercontent.com">
   <link rel="stylesheet" type="text/css" href="./login.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="../global/icon/icons.css" />
+  <link rel="stylesheet" href="../global/header.css" />
 
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
@@ -17,17 +18,13 @@
       <h1>Noduro Open Beta 1.0.0</h1>
     </div>
     <div class="header_right">
-      <button class="header_nav_button">
-        <a class="header_navigator padding" href=../index.html>Home</a>
+      <button class="header_nav_button"><a class="header_nav_links" href=../index.html>Home</a>
       </button>
-      <button class="header_nav_button">
-        <a class="header_navigator padding" href=../technology/tech.html>Technology</a>
+      <button class="header_nav_button"><a class="header_nav_links" href=../technology/tech.html>Technology</a>
       </button>
-      <button class="header_nav_button">
-        <a class="header_navigator padding" href=../settings/settings.html>Settings</a>
+      <button class="header_nav_button"><a class="header_nav_links" href=../settings/settings.html>Settings</a>
       </button>
-      <button class="header_nav_button">
-        <a class="header_navigator padding" href=login.html>Login</a>
+      <button class="header_nav_button"><a class="header_nav_links" href=login.html>Login</a>
       </button>
 
     </div>
@@ -37,29 +34,31 @@
   </div>
   <div class="main_div">
     <div class="signin_box">
-      <h1>Login</h1>
+      <h1>Sign in to Noduro</h1>
+
       <div class="login_box">
+
           <form method="post">
             <p>
-              <label for="username">Username:</label>
-              <input type="text" name="username" id="username">
+              <label for="email">Email  </label>
+              <input class = "input_box" type="email" name="email" id="email" placeholder="Email Address">
             </p>
             <p>
-              <label for="password">Password:</label>
-              <input type="password" name="password" id="password" />
+              <label for="password">Password  </label>
+              <input class = "input_box" type="password" name="password" id="password"  placeholder="Password"/>
               <i class="bi bi-eye-slash" id="togglePassword"></i>
+              <a class = "forgot_password" href="#">Forgot Password?</a>
             </p>
-            <button type="submit" id="submit" class="submit">Log In</button>
+            <div class = "button_div">
+            <button class = "sign_up_box" type="submit" id="sign_up">Sign up</button>
+            <button class = "sign_in_box" type="submit" id="sign_in">Sign in</button>
+            </div>
           </form>
-        <!-- <input class="input100" type="text" name="username" placeholder="Username or Email" control-id="ControlID-1">
-        <input class="input100" type="password" name="username" placeholder="Password" id="password"
-          control-id="ControlID-1">
-        <input class="smaller_font" type="checkbox" onclick="myFunction()"> Show Password
-        <div class="col-md-6">
-          <input id="password-field" type="password" class="form-control" name="password" value="secret">
-          <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
-        </div> -->
-      </div>
+
+          <div>
+            <h1 class = "line">OR</h1>
+          </div>
+        </div>
     </div>
     <script src="./main.js"></script>
 </body>
