--- a/technology/tech.html
+++ b/technology/tech.html
@@ -1,31 +1,33 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline';"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="google-signin-client_id"
+    content="135381014052-hs8qc6avk8chp3epae7lhv3jfot0stcp.apps.googleusercontent.com">
+  <link rel="stylesheet" type="text/css" href="./tech.css" />
+  <link rel="stylesheet" href="../global/icon/icons.css" />
+  <link rel="stylesheet" href="../global/header.css" />
+
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+</head>
+
+<body>
   <div class="page_header">
     <div class="header_left">
       <h1>Noduro Open Beta 1.0.0</h1>
     </div>
     <div class="header_right">
-        <button class = "header_nav_button"><a class = "header_navigator padding" href = ../index.html>Home</a></button>
-        <button class = "header_nav_button"><a class = "header_navigator padding" href = tech.html>Technology</a></button>
-        <button class = "header_nav_button"><a class = "header_navigator padding" href = ../settings/settings.html>Settings</a></button>
-        <button class = "header_nav_button"><a class = "header_navigator padding" href = ../login/login.html>Login</a></button>
-  
+      <button class="header_nav_button"><a class="header_nav_links" href=../index.html>Home</a>
+      </button>
+      <button class="header_nav_button"><a class="header_nav_links" href=tech.html>Technology</a>
+      </button>
+      <button class="header_nav_button"><a class="header_nav_links" href=../settings/settings.html>Settings</a>
+      </button>
+      <button class="header_nav_button"><a class="header_nav_links" href=../login/login.html>Login</a>
+      </button>
+
     </div>
   </div>
-  <body>
-    <div class="filler"><h1></h1></div>
-
-    <button id="toggle-mode">System</button>
-    <button id="reset-to-system">Reset to System Theme</button>
-
-    <script src="tech.js"></script>
+  <div class="filler">
+    <h1></h1>
+  </div>
   </body>
-</html>
+  </html>
