--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./global/header.css" /> 
-    <link rel="stylesheet" href="./styles.css" />
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="script-src 'self' 'unsafe-inline';"
-    />
-  </head>
-  <div class="page_header">
-      <div class="header_left">
-        <h1>Noduro Open Beta 1.0.0</h1>
-      </div>
-      <div class="header_right">
-        <button class = "header_nav_button"><a class = "header_nav_links" href = index.html>Home</a></button>
-        <button class = "header_nav_button"><a class = "header_nav_links" href = ./technology/tech.html>Technology</a></button>
-        <button class = "header_nav_button"><a class = "header_nav_links" href = ./settings/settings.html>Settings</a></button>
-        <button class = "header_nav_button"><a class = "header_nav_links" href = ./login/login.html>Login</a></button>
-  
-      </div>
-    </div>  
-  <body>
-    <div class="filler"><h1></h1></div>
 
-    <div class="welcome_div">
-      <h1 id = "welcome">Welcome to Noduro</h1>
-      <p id = "sign_in">Sign in to Noduro to access your account</p>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="./global/header.css" />
+  <link rel="stylesheet" href="./styles.css" />
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+</head>
+
+<body>
+  <div class="filler"></div>
+  <div class="page_header">
+    <div class="header_left">
+      <h1>Noduro Open Beta 1.0.0</h1>
     </div>
-    <script src="renderer.js"></script>
-  </body>
+    <div class="header_right">
+      <button class="header_nav_button"><a class="header_nav_links" href=./index.html>Home</a></button>
+      <button class="header_nav_button"><a class="header_nav_links" href=./technology/tech.html>Technology</a></button>
+      <button class="header_nav_button"><a class="header_nav_links" href=./settings/settings.html>Settings</a></button>
+      <button class="header_nav_button"><a class="header_nav_links" href=./login/login.html>Login</a></button>
+  
+    </div>
+  </div>
+
+  <div class="welcome_div">
+    <h1 id="welcome">Welcome to Noduro</h1>
+    <p id="sign_in">Sign in to Noduro to access your account</p>
+  </div>
+  <div class = "recommended">
+  <h1> Recommended for you</h1>
+  <div class="scrolling-div" id = "scrolling-div"> 
+  </div>
+  </div>
+  <script src="renderer.js"></script>
+  <script src="slidebar.js"></script>
+
+</body>
+
 </html>
