--- a/login/login.html
+++ b/login/login.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <div class="filler"> </div>
   <div class="page_header">
     <div class="header_left">
       <h1>Noduro Open Beta 1.0.0</h1>
@@ -28,9 +29,6 @@
       </button>
 
     </div>
-  </div>
-  <div class="filler">
-    <h1></h1>
   </div>
   <div class="main_div">
     <div class="signin_box">
