--- a/sign_up/sign_up.html
+++ b/sign_up/sign_up.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <div class="filler"></div>
   <div class="page_header">
     <div class="header_left">
       <h1>Noduro Open Beta 1.0.0</h1>
@@ -29,9 +30,6 @@
       </button>
 
     </div>
-  </div>
-  <div class="filler">
-    <h1></h1>
   </div>
   <div class="main_div">
     <div class="signin_box">
