--- a/technology/tech.html
+++ b/technology/tech.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div class="filler"></div>
   <div class="page_header">
     <div class="header_left">
       <h1>Noduro Open Beta 1.0.0</h1>
@@ -25,9 +26,6 @@
       </button>
 
     </div>
-  </div>
-  <div class="filler">
-    <h1></h1>
   </div>
   </body>
   </html>
