--- a/settings/settings.html
+++ b/settings/settings.html
@@ -25,19 +25,25 @@
 
   <div class="columns">
     <div class="column">
-      <h1>Account Settings</h1>
-      <label for="firstname">First name:</label>
-      <input type="text" id="firstname" name="firstname">
-      <br></br>
-      <label for="lastname">Last name:</label>
-      <input type="text" id="lastname" name="lastname">
-      <br></br>
-      <label for="displayname">Display Name:</label>
-      <input type="text" id="displayname" name="displayname">
+      <h1 class="heading">Name</h1>
+      <div class="row">
+        <div class = "name_inputs_container">
+          <label class="input_label" for="firstname">First name:</label>
+          <input type="text" id="firstname" name="firstname" placeholder = "First Name">
+        </div>
+        <div class = "name_inputs_container">
+          <label class="input_label"for="lastname">Last name: </label>
+          <input type="text" id="lastname" name="lastname" placeholder = "Last Name">
+        </div>
+      </div>
+      <div class = "name_inputs_container">
+        <label class="input_label"for="displayname">Display Name:</label>
+        <input type="text" id="displayname" name="displayname" placeholder = "Display Name">
+      </div>
 
     </div>
     <div class="column">
-      <h1>Visual Preferences</h1>
+      <h1 class = "heading">Visual Preferences</h1>
       <label for="darkmode">Choose a theme mode:</label>
       <select id="darkmode">
         <option>System</option>
