slidebar updates, header text scaling, setting backend work

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -26,15 +26,13 @@
   <div class="columns">
     <div class="column">
       <h1 class="heading">Name</h1>
-      <div class="row">
         <div class = "name_inputs_container">
           <label class="input_label" for="firstname">First name:</label>
           <input type="text" id="firstname" name="firstname" placeholder = "First Name">
         </div>
-        <div class = "name_inputs_container">
-          <label class="input_label"for="lastname">Last name: </label>
-          <input type="text" id="lastname" name="lastname" placeholder = "Last Name">
-        </div>
+      <div class = "name_inputs_container">
+        <label class="input_label"for="lastname">Last name: </label>
+        <input type="text" id="lastname" name="lastname" placeholder = "Last Name">
       </div>
       <div class = "name_inputs_container">
         <label class="input_label"for="displayname">Display Name:</label>
@@ -44,14 +42,14 @@
     </div>
     <div class="column">
       <h1 class = "heading">Visual Preferences</h1>
-      <label for="darkmode">Choose a theme mode:</label>
+      <label class = "input_label" for="darkmode">Choose a theme mode:</label>
       <select id="darkmode">
         <option>System</option>
         <option>Dark</option>
         <option>Light</option>
       </select>
       <br></br>
-      <button id="buttons">Submit</button>
+      <button class = "submit_button" id="buttons">Submit</button>
 
     </div>
   </div>
