--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <div class="filler"></div>
-  <div class="page_header">
+  <div id = "page_header" class="page_header">
     <div class="header_left">
       <h1>Noduro Open Beta 1.0.0</h1>
     </div>
     <div class="header_right">
-      <button class="header_nav_button"><a class="header_nav_links" href=./index.html>Home</a></button>
+      <button class="header_nav_button"><a class="header_nav_links">Home</a></button>
       <button class="header_nav_button"><a class="header_nav_links" href=./technology/tech.html>Technology</a></button>
       <button class="header_nav_button"><a class="header_nav_links" href=./settings/settings.html>Settings</a></button>
       <button class="header_nav_button"><a class="header_nav_links" href=./login/login.html>Login</a></button>
@@ -24,8 +24,8 @@
   </div>
 
   <div class="welcome_div">
-    <h1 id="welcome">Welcome to Noduro</h1>
-    <p id="sign_in">Sign in to Noduro to access your account</p>
+    <h1 class = "welcome_div_items" id="welcome">Welcome to Noduro</h1>
+    <p class = "welcome_div_items" id="sign_in">Sign in to Noduro to access your account</p>
   </div>
   <div class = "recommended">
   <h1> Recommended for you</h1>
