--- a/settings/settings.html
+++ b/settings/settings.html
@@ -38,8 +38,15 @@
         <label class="input_label"for="displayname">Display Name:</label>
         <input type="text" id="displayname" name="displayname" placeholder = "Display Name">
       </div>
+        <div class = "name_inputs_container">
+          <label class="input_label"for="displayname">Theme:</label>
+          <div class = "theme_button_container"><button id = "dark_button" id = "buttons"class = "theme_button"> dark </button> <button id = "light_button" id = "buttons "class = "theme_button"> light </button></div>
+        </div>
+      </div>
 
     </div>
+
+    
     <div class="column">
       <h1 class = "heading">Visual Preferences</h1>
       <label class = "input_label" for="darkmode">Choose a theme mode:</label>
