--- a/settings/settings.html
+++ b/settings/settings.html
@@ -4,24 +4,27 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="./settings.css" />
-  <link rel="stylesheet" href="../global/header.css" />
+  <link rel="stylesheet" href="../global/global_header.css" />
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
 <body>
-  <div class="filler"> </div>
-  <div class="page_header">
-    <div class="header_left">
-      <h1>Noduro Open Beta 1.0.0</h1>
-    </div>
-    <div class="header_right">
-      <button class="header_nav_button"><a class="header_nav_links" href=../index.html>Home</a></button>
-      <button class="header_nav_button"><a class="header_nav_links" href=../technology/tech.html>Technology</a></button>
-      <button class="header_nav_button"><a class="header_nav_links" href=settings.html>Settings</a></button>
-      <button class="header_nav_button"><a class="header_nav_links" href=../login/login.html>Login</a></button>
+  <header>
+    <div class = "filler"></div>
+    <div class = "global_header"> 
+      <div class = "header_left">
+        <h1 class = "header_title" onclick="window.location.href='../index.html';">Noduro Open Beta 1.0</h1>
+      </div>
+      <div class = "header_right">
+        <button class = "navigation_button" onclick="window.location.href='../index.html';">Home</button>
+        <button class = "navigation_button" onclick="window.location.href='../technology/tech.html';">Technology</button>
+        <button class = "navigation_button" onclick="window.location.href='./settings.html';">Settings</button>
+        <button class = "navigation_button" onclick="window.location.href='../login/login.html';">Login</button>
 
+      </div>
     </div>
-  </div>
+  </header>
+
 
   <div class="columns">
     <div class="column">
