--- a/technology/tech.html
+++ b/technology/tech.html
@@ -1,31 +1,30 @@
+<!DOCTYPE html>
 <head>
   <meta charset="UTF-8" />
   <meta name="google-signin-client_id"
     content="135381014052-hs8qc6avk8chp3epae7lhv3jfot0stcp.apps.googleusercontent.com">
   <link rel="stylesheet" type="text/css" href="./tech.css" />
   <link rel="stylesheet" href="../global/icon/icons.css" />
-  <link rel="stylesheet" href="../global/header.css" />
+  <link rel="stylesheet" href="../global/global_header.css" />
 
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
 <body>
-  <div class="filler"></div>
-  <div class="page_header">
-    <div class="header_left">
-      <h1>Noduro Open Beta 1.0.0</h1>
-    </div>
-    <div class="header_right">
-      <button class="header_nav_button"><a class="header_nav_links" href=../index.html>Home</a>
-      </button>
-      <button class="header_nav_button"><a class="header_nav_links" href=tech.html>Technology</a>
-      </button>
-      <button class="header_nav_button"><a class="header_nav_links" href=../settings/settings.html>Settings</a>
-      </button>
-      <button class="header_nav_button"><a class="header_nav_links" href=../login/login.html>Login</a>
-      </button>
+  <header>
+    <div class = "filler"></div>
+    <div class = "global_header"> 
+      <div class = "header_left">
+        <h1 class = "header_title" onclick="window.location.href='./index.html';">Noduro Open Beta 1.0</h1>
+      </div>
+      <div class = "header_right">
+        <button class = "navigation_button" onclick="window.location.href='../index.html';">Home</button>
+        <button class = "navigation_button" onclick="window.location.href='./tech.html';">Technology</button>
+        <button class = "navigation_button" onclick="window.location.href='../settings/settings.html';">Settings</button>
+        <button class = "navigation_button" onclick="window.location.href='../login/login.html';">Login</button>
 
+      </div>
     </div>
-  </div>
+  </header>
   </body>
   </html>
