--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./global/global_header.css" />
   <link rel="stylesheet" href="./styles.css" />
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<meta charset="utf-8" />
+<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net/;">
 </head>
 
 <body>
@@ -28,12 +30,33 @@
   <div class="welcome_div animation">
     <h1 class = "items" id="welcome">Welcome to Noduro</h1>
     <p class = "items" id="sign_in">Sign in to Noduro to access your account</p>
+    <p class = "items" id=signed_in></p>
+
   </div>
-  <div class = "recommended">
-  <h1> Recommended for you</h1>
-  <div class="scrolling-div" id = "scrolling-div"> 
+  <div class = "boxes">
+    <div class = "box recommended">
+        <h1 id = "recommendation_text" class = "text"> Recommended for you</h1>
+      <div class = "scrolling-wrapper">
+      <div id = "left_shadow" class="left before"></div>
+      <div id = "right_shadow" class="right before"></div>
+      <div class="scrolling-div" id = "scrolling-div">
+        <!-- <div class = "filler"></div> -->
+      </div>
+    
+      </div>
+      </div>
+    <div class = "box statistics "><canvas id="myChart" class = "stats"></canvas></div>
+    <div class = "box filler_1"></div>
+    <div class = "box filler_2"></div>
+    <div class = "box filler_2"></div>
+    <div class = "box filler_1"></div>
+    <div class = "box statistics "></div>
+
+
   </div>
-  </div>
+
+  
+  
   <script src="renderer.js"></script>
   <script src="slidebar.js"></script>
 
