--- a/login/login.html
+++ b/login/login.html
@@ -35,7 +35,7 @@
 
       <div class="login_box">
 
-        <form method="post">
+        <form method="post" id = "sign_in">
           <p>
             <label for="email">Email </label>
             <input class="input_box" type="email" name="email" id="email" placeholder="Email Address" required>
