--- a/settings/settings.html
+++ b/settings/settings.html
@@ -26,9 +26,10 @@
   </header>
 
 
+  <div class = "page_container">
   <div class="columns">
     <div class="column">
-      <h1 class="heading">Name</h1>
+      <h1 class="heading">System Settings</h1>
         <div class = "name_inputs_container">
           <label class="input_label" for="firstname">First name:</label>
           <input type="text" id="firstname" name="firstname" placeholder = "First Name">
@@ -43,11 +44,16 @@
       </div>
         <div class = "name_inputs_container">
           <label class="input_label"for="displayname">Theme:</label>
-          <div class = "theme_button_container"><button id = "dark_button" id = "buttons"class = "theme_button"> dark </button> <button id = "light_button" id = "buttons "class = "theme_button"> light </button></div>
+          <div class = "theme_button_container">
+            <button id = "dark_button" class = "dark_button"> dark </button>
+            <button id = "system_button" class = "system_button"> system </button> 
+            <button id = "light_button" class = "light_button"> light </button>
+          </div>
         </div>
       </div>
 
     </div>
+  </div>
 
     
     <div class="column">
