settings paged changed

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -27,8 +27,6 @@
 
 
   <div class = "page_container">
-  <div class="columns">
-    <div class="column">
       <h1 class="heading">System Settings</h1>
         <div class = "name_inputs_container">
           <label class="input_label" for="firstname">First name:</label>
@@ -50,16 +48,13 @@
             <button id = "light_button" class = "light_button"> light </button>
           </div>
         </div>
-      </div>
-
-    </div>
   </div>
 
     
     <div class="column">
       <h1 class = "heading">Visual Preferences</h1>
       <label class = "input_label" for="darkmode">Choose a theme mode:</label>
-      <select id="darkmode">
+      <select class = "dropdown" id="darkmode">
         <option>System</option>
         <option>Dark</option>
         <option>Light</option>
