working on python integration

--- a/index.html
+++ b/index.html
@@ -30,26 +30,22 @@
                 <div class="header_right">
                     <button
                         class="navigation_button"
-                        onclick="window.location.href='./index.html';"
-                    >
+                        onclick="window.location.href='./index.html';">
                         Home
                     </button>
                     <button
                         class="navigation_button"
-                        onclick="window.location.href='./technology/tech.html';"
-                    >
+                        onclick="window.location.href='./technology/tech.html';">
                         Technology
                     </button>
                     <button
                         class="navigation_button"
-                        onclick="window.location.href='./settings/settings.html';"
-                    >
+                        onclick="window.location.href='./settings/settings.html';">
                         Settings
                     </button>
                     <button
                         class="navigation_button"
-                        onclick="window.location.href='./login/login.html';"
-                    >
+                        onclick="window.location.href='./login/login.html';">
                         Login
                     </button>
                 </div>
