--- a/technology/tech.html
+++ b/technology/tech.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class = "camera_div">
-      <video class = "camera" id="camera" autoplay></video>
+      <image class = "camera" id="camera"></image>
     </div>
   </div>
   </body>
