minor css changes to settings page

--- a/settings/settings.html
+++ b/settings/settings.html
@@ -50,7 +50,7 @@
         </div>
   </div>
 
-    
+<!--     
     <div class="column">
       <h1 class = "heading">Visual Preferences</h1>
       <label class = "input_label" for="darkmode">Choose a theme mode:</label>
@@ -62,7 +62,7 @@
       <br></br>
       <button class = "submit_button" id="buttons">Submit</button>
 
-    </div>
+    </div> -->
   </div>
   <script src="./settings.js"></script>
 </body>
