firestore user data

--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
             </div>
         </header>
         <div class="welcome_div animation">
-            <h1 class="items" id="welcome">Welcome to Noduro</h1>
-            <p class="items" id="sign_in">
-                Sign in to Noduro to access your account
-            </p>
+            <h1 class="items" id="welcome"></h1>
+            <p class="items" id="sign_in"></p>
             <p class="items" id="signed_in"></p>
         </div>
         <div class="boxes">
