--- a/login/login.html
+++ b/login/login.html
@@ -3,13 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="google-signin-client_id"
-    content="135381014052-hs8qc6avk8chp3epae7lhv3jfot0stcp.apps.googleusercontent.com">
   <link rel="stylesheet" type="text/css" href="./login.css" />
   <link rel="stylesheet" href="../global/icon/icons.css" />
   <link rel="stylesheet" href="../global/global_header.css" />
 
-  <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net/;"/>
 </head>
 
 <body>
@@ -66,8 +64,6 @@
     </div>
     <script src="./login.js"></script>
 
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
 </body>
