--- a/settings/settings.html
+++ b/settings/settings.html
@@ -41,23 +41,17 @@
             <div class="theme-button"> <button id=toggle-button-3>Dark</button> </div>
           </div>
         </div>
-        <!-- <div class = "split">
-        <div class="font-size-toggle">
-          <button class="small">Small</button>
-          <button class="normal">Normal</button>
-          <button class="large">Large</button>
-        </div>
-        
-      </div> -->
       </div>
       <div class="sub-item">
         <h1 class="heading">Video</h1>
         <hr class="accent-line">
         <video id="camera_test" class="video"></video>
-        <label for="resolution">Resolution:</label>
+        <div class = "split">
+        <label class="toggle_switch_label" for="resolution">Resolution:</label>
         <select id="resolution" class="dropdown option">
           <!-- Add more resolution options if needed -->
         </select>
+      </div>
         <div class = "split-space-2col">
         <label class = "toggle_switch_label">Flip Camera</label>
         <label class="toggle-switch">
