--- a/technology/tech.html
+++ b/technology/tech.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header>
+  <!-- <header>
     <div class = "filler"></div>
     <div class = "global_header"> 
       <div class = "header_left">
@@ -25,6 +25,19 @@
 
       </div>
     </div>
-  </header>
+  </header> -->
+  <div class = "main_div">
+    <div class = "video_div">
+    <video class = "camera" autoplay >
+      <source src="../fake_data/0.mp4" type="video/mp4">
+    </video>
+    </div>
+
+    <div class = "camera_div">
+      <image class = "camera" id="camera"></image>
+    </div>
+  </div>
   </body>
+  <script src = "./tech.js"></script>
+
   </html>
