virtual environment creation (readme updated) and potential solution to python websocket issue

--- a/technology/tech.html
+++ b/technology/tech.html
@@ -28,13 +28,13 @@
   </header> -->
   <div class = "main_div">
     <div class = "video_div">
-    <video class = "camera" autoplay >
+    <video class = "camera" autoplay loop >
       <source src="../fake_data/0.mp4" type="video/mp4">
     </video>
     </div>
 
     <div class = "camera_div">
-      <image class = "camera" id="camera"></image>
+      <canvas class = "camera" id="camera" width="1920" height="1080"></canvas>
     </div>
   </div>
   </body>
